// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source/index.tsx getAllBrowserFields it returns an array of all fields in the BrowserFields argument 1`] = `
Array [
  Object {
    "aggregatable": true,
    "count": 10,
    "esTypes": Array [
      "long",
    ],
    "isMapped": true,
    "name": "bytes",
    "readFromDocValues": true,
    "scripted": false,
    "searchable": true,
    "type": "number",
  },
  Object {
    "aggregatable": true,
    "count": 20,
    "esTypes": Array [
      "boolean",
    ],
    "isMapped": true,
    "name": "ssl",
    "readFromDocValues": true,
    "scripted": false,
    "searchable": true,
    "type": "boolean",
  },
  Object {
    "aggregatable": true,
    "count": 30,
    "esTypes": Array [
      "date",
    ],
    "isMapped": true,
    "name": "@timestamp",
    "readFromDocValues": true,
    "scripted": false,
    "searchable": true,
    "type": "date",
  },
]
`;

exports[`source/index.tsx getBrowserFields it transforms input into output as expected 1`] = `
Object {
  "base": Object {
    "fields": Object {
      "@timestamp": Object {
        "aggregatable": true,
        "count": 30,
        "esTypes": Array [
          "date",
        ],
        "isMapped": true,
        "name": "@timestamp",
        "readFromDocValues": true,
        "scripted": false,
        "searchable": true,
        "type": "date",
      },
      "bytes": Object {
        "aggregatable": true,
        "count": 10,
        "esTypes": Array [
          "long",
        ],
        "isMapped": true,
        "name": "bytes",
        "readFromDocValues": true,
        "scripted": false,
        "searchable": true,
        "type": "number",
      },
      "ssl": Object {
        "aggregatable": true,
        "count": 20,
        "esTypes": Array [
          "boolean",
        ],
        "isMapped": true,
        "name": "ssl",
        "readFromDocValues": true,
        "scripted": false,
        "searchable": true,
        "type": "boolean",
      },
    },
  },
}
`;
